--- a/Wes Bos Exercises/npm modules/package.json
+++ b/Wes Bos Exercises/npm modules/package.json
@@ -16,6 +16,7 @@
     "await-to-js": "^3.0.0",
     "axios": "^1.3.4",
     "date-fns": "^2.29.3",
+    "dompurify": "^3.0.1",
     "lodash": "^4.17.21",
     "waait": "^1.0.5"
   }
