--- a/Wes Bos Exercises/Security/package.json
+++ b/Wes Bos Exercises/Security/package.json
@@ -10,5 +10,8 @@
   "license": "ISC",
   "devDependencies": {
     "parcel-bundler": "^1.12.5"
+  },
+  "dependencies": {
+    "dompurify": "^3.0.1"
   }
 }
